# GN0-VLN-CE

./: .gitignore  README.md  bae_agent_dagger.py  bae_agent_eval.py  dagger_ce.sh  eval_ce.sh
bae/: __init__.py  constants.py  inference.py  mpc_tools.py  parser.py  prompts.py  pyproject.toml
habitat-tools/HabitatTools/: __init__.py  eval_ce_aligned.py
habitat-tools/HabitatTools/agents/: __init__.py  bae_ce_aligned_agent.py  bae_v3_agent.py  base.py  habitat_dagger_sim_adapter.py
habitat-tools/HabitatTools/cli/: collect_ce_aligned_pool.py  eval.py  eval_ce_aligned.py  merge_chunks.py
habitat-tools/HabitatTools/config/: __init__.py  defaults.py  resolver.py
habitat-tools/HabitatTools/datasets/: __init__.py  r2r_loader.py
habitat-tools/HabitatTools/env/: __init__.py  habitat_env.py
habitat-tools/HabitatTools/evaluators/: __init__.py  ce_evaluator.py
habitat-tools/HabitatTools/habitat_extensions/: __init__.py  measures.py
habitat-tools/HabitatTools/io/: __init__.py  progress.py  results.py
habitat-tools/HabitatTools/metrics/: __init__.py  ce_metrics.py
habitat-tools/HabitatTools/utils/: __init__.py  actions.py  images.py
habitat-tools/configs/: vln_r2r_hydra.yaml  vln_r2r_legacy.yaml
habitat-tools/scripts/: eval_habitat_bae_vlnce_aligned.sh  run_habitat_aligned_dagger_data.sh
tools/: analyze_total_metrics.py  build_occupancy_ce.sh  build_occupancy_from_habitat.py  check_dagger_samples.py  monitor_chunk_health.py  monitor_dagger_progress.py  verify_data_links.sh
